Fix the missing Edit link from App Lookup tool

--- a/mkt/lookup/templates/lookup/app_summary.html
+++ b/mkt/lookup/templates/lookup/app_summary.html
@@ -10,7 +10,7 @@
                       ('alltime', _('all time'))) %}
 
   <section class="island c">
-    {{ app_header(app, 'summary') }}
+    {{ app_header(app, 'summary', is_admin) }}
 
     <section class="column-b">
       <dl>
