--- a/mkt/reviewers/templates/reviewers/includes/macros.html
+++ b/mkt/reviewers/templates/reviewers/includes/macros.html
@@ -46,9 +46,9 @@
   </ul>
 {% endmacro %}
 
-{% macro log_filter(form) %}
+{% macro log_filter(form, action_url) %}
   <div id="log-filter" class="log-filter-outside island">
-    <form action="{{ url('reviewers.apps.logs') }}" method="get">
+    <form action="{{ url(action_url) }}" method="get">
       <div class="date_range">
         {{ form.start.label_tag() }}
         {{ form.start }}
