Reposition info requests as generic send to developer message (inc bug 1099355)

--- a/mkt/comm/templates/comm/emails/more_info_required.html
+++ b/mkt/comm/templates/comm/emails/more_info_required.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 We need additional information to complete review of {{ app.name }}.
-
+##change me##
 {% include 'comm/emails/includes/details.html' %}
 {% endblock %}
